logs/wikidoc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/livereload'...
Listing './lib/python3.5/site-packages/livereload/management'...
Listing './lib/python3.5/site-packages/livereload/management/commands'...
Listing './lib/python3.5/site-packages/livereload/vendors'...
Listing './lib/python3.5/site-packages/livereload-2.5.1.egg-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mkdocs'...
Listing './lib/python3.5/site-packages/mkdocs/commands'...
Listing './lib/python3.5/site-packages/mkdocs/config'...
Listing './lib/python3.5/site-packages/mkdocs/contrib'...
Listing './lib/python3.5/site-packages/mkdocs/contrib/legacy_search'...
Listing './lib/python3.5/site-packages/mkdocs/contrib/legacy_search/templates'...
Listing './lib/python3.5/site-packages/mkdocs/contrib/legacy_search/templates/search'...
Listing './lib/python3.5/site-packages/mkdocs/templates'...
Listing './lib/python3.5/site-packages/mkdocs/tests'...
Listing './lib/python3.5/site-packages/mkdocs/tests/config'...
Listing './lib/python3.5/site-packages/mkdocs/tests/integration'...
Listing './lib/python3.5/site-packages/mkdocs/tests/integration/complicated_config'...
Listing './lib/python3.5/site-packages/mkdocs/tests/integration/complicated_config/documentation'...
Listing './lib/python3.5/site-packages/mkdocs/tests/integration/complicated_config/theme_tweaks'...
Listing './lib/python3.5/site-packages/mkdocs/tests/integration/subpages'...
Listing './lib/python3.5/site-packages/mkdocs/tests/integration/subpages/docs'...
Listing './lib/python3.5/site-packages/mkdocs/tests/integration/subpages/docs/sub1'...
Listing './lib/python3.5/site-packages/mkdocs/tests/utils'...
Listing './lib/python3.5/site-packages/mkdocs/themes'...
Listing './lib/python3.5/site-packages/mkdocs/themes/mkdocs'...
Listing './lib/python3.5/site-packages/mkdocs/themes/mkdocs/css'...
Listing './lib/python3.5/site-packages/mkdocs/themes/mkdocs/fonts'...
Listing './lib/python3.5/site-packages/mkdocs/themes/mkdocs/img'...
Listing './lib/python3.5/site-packages/mkdocs/themes/mkdocs/js'...
Listing './lib/python3.5/site-packages/mkdocs/themes/readthedocs'...
Listing './lib/python3.5/site-packages/mkdocs/themes/readthedocs/css'...
Listing './lib/python3.5/site-packages/mkdocs/themes/readthedocs/fonts'...
Listing './lib/python3.5/site-packages/mkdocs/themes/readthedocs/img'...
Listing './lib/python3.5/site-packages/mkdocs/themes/readthedocs/js'...
Listing './lib/python3.5/site-packages/mkdocs/utils'...
Listing './lib/python3.5/site-packages/mkdocs-0.17.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/wikidoc'...
Listing './lib/python3.5/site-packages/wikidoc-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
